--- a/ui/package.json
+++ b/ui/package.json
@@ -3,12 +3,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
-    "braintree-web": "^3.85.3",
-    "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "axios": "^0.27.2",
+    "braintree-web-drop-in": "^1.33.2",
+    "next": "^12.1.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
