--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -1,2 +1,18 @@
 stripe:
   private_key: ${STRIPE_PRIVATE_KEY}
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          auth0:
+            client-id: ${AUTH0_CLIENT_ID}
+            client-secret: ${AUTH0_CLIENT_SECRET}
+            scope:
+              - openid
+              - profile
+              - email
+        provider:
+          auth0:
+            # trailing slash is important!
+            issuer-uri: ${AUTH0_DOMAIN}
