--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,12 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.2",
+    "@auth0/nextjs-auth0": "^1.9.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
     "@stripe/react-stripe-js": "^1.9.0",
     "axios": "^0.27.2",
     "next": "^12.1.6",
