--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -3,16 +3,15 @@ stripe:
 spring:
   security:
     oauth2:
-      client:
-        registration:
-          auth0:
-            client-id: ${AUTH0_CLIENT_ID}
-            client-secret: ${AUTH0_CLIENT_SECRET}
-            scope:
-              - openid
-              - profile
-              - email
-        provider:
-          auth0:
-            # trailing slash is important!
-            issuer-uri: ${AUTH0_DOMAIN}
+      resourceserver:
+        jwt:
+          issuer-uri:  ${AUTH0_DOMAIN}
+  data:
+    mongodb:
+      uri: mongodb://localhost:27888/htdb  #${MONGODB_URI}
+
+auth0:
+  connection: "Username-Password-Authentication"
+  audience: "https://happy-tenant.meraklis.io/api"
+  client_id: ${AUTH0_CLIENT_ID}
+  client_secret: ${AUTH0_CLIENT_ID}
