--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "^5.8.7",
+    "@mui/x-data-grid": "^5.12.3",
     "@stripe/react-stripe-js": "^1.9.0",
     "axios": "^0.27.2",
     "next": "^12.1.6",
