--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ spring:
         jwt:
           issuer-uri:  ${AUTH0_DOMAIN}
   data:
+    rest:
+      base-path: /api
     mongodb:
       uri: mongodb://localhost:27888/htdb  #${MONGODB_URI}
 
