--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,4 +17,7 @@ auth0:
   audience: "https://happy-tenant.meraklis.io/api"
   client_id: ${AUTH0_CLIENT_ID}
   client_secret: ${AUTH0_CLIENT_ID}
-sendgrid-api-key: ${SENDGRID_API_KEY}
+email:
+  no-reply: "no-reply@meraklis.io"
+  sendgrid-api-key: ${SENDGRID_API_KEY}
+tenant-portal-login-url: "http://localhost:3000/tenant-portal/login"
