--- a/ui/package.json
+++ b/ui/package.json
@@ -16,8 +16,10 @@
     "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.12.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.2",
     "@stripe/react-stripe-js": "^1.9.0",
     "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "next": "^12.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
