--- a/ui/package.json
+++ b/ui/package.json
@@ -17,13 +17,15 @@
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.12.3",
     "@mui/x-date-pickers": "^5.0.0-beta.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "@stripe/react-stripe-js": "^1.9.0",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "next": "^12.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.33.1"
+    "react-hook-form": "^7.33.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "eslint": "8.19.0",
