Remove unused dependency @auth0/nextjs-auth0, code clean up, updated favicon.ico, adding dev.meraklis.io to build script

--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -34,5 +34,5 @@ spring:
   data:
     mongodb:
       uri: ${MONGODB_URI}
-landlord-portal-url: "https://happy-tenant.herokuapp.com"
-tenant-portal-url: "https://happy-tenant.herokuapp.com/tenant-portal"
+landlord-portal-url: ${BASE_APP_URL}
+tenant-portal-url: ${BASE_APP_URL}/tenant-portal
